--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       background-color: rgba(13,13,13,0.95);
       backdrop-filter: blur(12px);
       border-bottom: 1px solid #222;
-      padding: 0.8rem 0;
+      padding: 0.6rem 0;
     }
     .navbar-brand { 
-      font-size: 1.4rem; 
+      font-size: 1.3rem; 
       font-weight: 700; 
       color: var(--text-light); 
       text-transform: lowercase; 
@@ -36,28 +36,29 @@
       border: none; 
       color: var(--text-light); 
       border-radius: 30px 0 0 30px; 
-      height: 45px; 
+      height: 40px; 
     }
     .search-btn { 
       background-color: var(--accent-gold); 
       border-radius: 0 30px 30px 0; 
-      width: 55px; 
-      height: 45px; 
+      width: 50px; 
+      height: 40px; 
     }
     .nav-icon { 
       color: var(--text-light); 
-      font-size: 1.5rem; 
+      font-size: 1.4rem; 
       cursor: pointer; 
     }
     .nav-icon:hover { color: var(--accent-gold); }
     .search-container { 
       flex-grow: 1; 
-      max-width: 800px; 
-      margin: 0 1rem; 
+      max-width: 600px; 
+      margin: 0 0.8rem; 
     }
     .dropdown-menu {
       background-color: #222;
       border: 1px solid #444;
+      min-width: 180px;
     }
     .dropdown-item {
       color: var(--text-light);
@@ -73,8 +74,8 @@
       pointer-events: none;
     }
     .hero {
-      height: 80vh;
-      min-height: 600px;
+      height: 70vh;
+      min-height: 500px;
       background: linear-gradient(var(--overlay), var(--overlay)),
                   url('https://images.stockx.com/images/Alexander-McQueen-Oversized-Light-Gold-Product.jpg?fit=fill&bg=FFFFFF&w=1400&h=1000&fm=webp&auto=compress&q=90') center/cover no-repeat;
       display: flex;
@@ -82,9 +83,14 @@
       text-align: center;
       position: relative;
     }
+    .hero-content {
+      width: 100%;
+    }
     .hero-logo {
-      width: 140px;
-      height: 140px;
+      max-width: 130px;
+      max-height: 130px;
+      width: auto;
+      height: auto;
       object-fit: contain;
       background: white;
       padding: 10px;
@@ -105,27 +111,32 @@
       height: 100%;
       position: relative;
     }
-    .product-card:hover { transform: translateY(-12px); }
-    .product-img { width: 100%; height: 270px; object-fit: cover; }
+    .product-card:hover { transform: translateY(-10px); }
+    .product-img { 
+      width: 100%; 
+      height: 250px; 
+      object-fit: cover; 
+      object-position: center;
+    }
     .product-info {
-      padding: 16px;
+      padding: 14px;
       flex-grow: 1;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
     }
-    .product-title { font-weight: 600; font-size: 1.1rem; margin-bottom: 8px; }
+    .product-title { font-weight: 600; font-size: 1rem; margin-bottom: 6px; }
     .product-desc {
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       color: #555;
-      margin-bottom: 12px;
+      margin-bottom: 10px;
       display: -webkit-box;
       -webkit-line-clamp: 3;
       -webkit-box-orient: vertical;
       overflow: hidden;
     }
     .product-price {
-      font-size: 1rem;
+      font-size: 0.95rem;
       font-weight: 700;
       color: #000;
       text-decoration: underline;
@@ -137,8 +148,8 @@
       background: rgba(255,255,255,0.95);
       border: none;
       border-radius: 50%;
-      width: 40px;
-      height: 40px;
+      width: 38px;
+      height: 38px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -146,7 +157,7 @@
     }
     .admin-pencil .dropdown-toggle i {
       color: #333;
-      font-size: 1.3rem;
+      font-size: 1.2rem;
     }
     .admin-pencil .dropdown-toggle:hover {
       background: var(--accent-gold);
@@ -155,11 +166,11 @@
       color: white;
     }
     .preview-img {
-      width: 90px;
-      height: 90px;
+      width: 80px;
+      height: 80px;
       object-fit: cover;
       border-radius: 10px;
-      margin: 8px;
+      margin: 6px;
       border: 3px solid var(--accent-gold);
     }
     .size-quantity-box {
@@ -198,7 +209,7 @@
     #coleccion {
       background-color: #ffffff;
       color: #000000;
-      padding-bottom: 80px;
+      padding-bottom: 60px;
     }
     #coleccion h2 {
       color: #000000;
@@ -210,7 +221,7 @@
       color: var(--text-light);
       font-weight: 600;
       border: none;
-      padding: 12px 30px;
+      padding: 10px 25px;
     }
     .auth-modal .nav-tabs .nav-link.active {
       color: var(--accent-gold);
@@ -232,91 +243,71 @@
       color: var(--accent-gold);
     }
 
-    /* Responsive para móviles */
+    /* Responsive optimizado */
+    @media (max-width: 992px) {
+      .hero {
+        height: 65vh;
+      }
+      .hero-logo {
+        max-width: 110px;
+        max-height: 110px;
+      }
+      .hero h1 {
+        font-size: 2.2rem;
+      }
+    }
     @media (max-width: 768px) {
       .hero {
         height: 60vh;
-        min-height: 400px;
+      }
+      .hero-logo {
+        max-width: 100px;
+        max-height: 100px;
+        padding: 8px;
       }
       .hero h1 {
-        font-size: 2.2rem !important;
+        font-size: 2rem;
       }
       .hero .lead {
         font-size: 1rem;
-      }
-      .hero .btn-lg {
-        font-size: 1rem;
-        padding: 0.6rem 1.5rem;
-      }
-      .hero-logo {
-        width: 100px;
-        height: 100px;
-        padding: 8px;
-      }
-      .navbar-brand {
-        font-size: 1.2rem;
-      }
-      .search-container {
-        margin: 0 0.5rem;
-        max-width: none;
-      }
-      .search-input, .search-btn {
-        height: 38px;
-        font-size: 0.9rem;
-      }
-      .search-btn {
-        width: 45px;
-      }
-      .nav-icon {
-        font-size: 1.3rem;
       }
       .product-img {
         height: 220px;
       }
-      .product-title {
-        font-size: 1rem;
+    }
+    @media (max-width: 576px) {
+      .hero {
+        height: 55vh;
+        min-height: 420px;
       }
-      .product-desc {
-        font-size: 0.85rem;
-      }
-      .product-price {
-        font-size: 0.95rem;
-      }
-      .btn-sm {
-        font-size: 0.85rem;
-        padding: 0.4rem 0.8rem;
-      }
-      .admin-pencil .dropdown-toggle {
-        width: 35px;
-        height: 35px;
-      }
-      .admin-pencil .dropdown-toggle i {
-        font-size: 1.1rem;
-      }
-      #coleccion h2 {
+      .hero h1 {
         font-size: 1.8rem;
       }
-      .container {
-        padding-left: 15px;
-        padding-right: 15px;
-      }
-    }
-
-    @media (max-width: 576px) {
-      .hero h1 {
-        font-size: 1.8rem !important;
-      }
       .hero .lead {
-        font-size: 0.9rem;
+        font-size: 0.95rem;
+      }
+      .hero .btn-lg {
+        font-size: 0.95rem;
+        padding: 0.6rem 1.4rem;
+      }
+      .hero-logo {
+        max-width: 90px;
+        max-height: 90px;
+        padding: 6px;
+      }
+      .navbar-brand {
+        font-size: 1.1rem;
       }
       .search-container {
-        order: 3;
-        margin-top: 0.5rem;
+        margin: 0.5rem 0 0 0;
         width: 100%;
+        max-width: none;
       }
-      .navbar .d-flex.align-items-center {
-        width: 100%;
-        justify-content: space-between;
+      .search-input, .search-btn {
+        height: 38px;
+      }
+      .nav-icon {
+        font-size: 1.3rem;
       }
       .product-img {
         height: 200px;
@@ -340,8 +331,8 @@
           <a class="nav-icon" id="userDropdownToggle" href="#" role="button">
             <i class="bi bi-person"></i>
           </a>
-          <ul class="dropdown-menu dropdown-menu-end" id="userDropdownMenu">
-            <li><div class="user-name-dropdown" id="userNameDisplay">Usuario</div></li>
+          <ul class="dropdown-menu dropdown-menu-end" id="userDropdownMenu" style="display: none;">
+            <li><div class="user-name-dropdown" id="userNameDisplay"></div></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item text-danger" href="#" id="logoutLink">Cerrar sesión</a></li>
           </ul>
@@ -353,18 +344,18 @@
 
   <!-- Hero -->
   <section class="hero" id="heroSection">
-    <div class="container">
-      <img id="heroLogo" class="hero-logo mb-4" alt="NARF Shop Logo">
+    <div class="container hero-content">
+      <img id="heroLogo" class="hero-logo d-block mx-auto mb-4" alt="NARF Shop Logo">
       <h1 class="display-4 fw-bold">Sneakers Premium</h1>
       <p class="lead mt-3">Precios exclusivos en mayoreo • Calidad G5 • Envíos a todo México</p>
-      <a href="#coleccion" class="btn btn-warning btn-lg mt-4">EXPLORAR COLECCIÓN</a>
+      <a href="#coleccion" class="btn btn-warning btn-lg mt-4 d-block mx-auto">EXPLORAR COLECCIÓN</a>
     </div>
   </section>
 
   <!-- Colección -->
   <section id="coleccion" class="py-5">
     <div class="container">
-      <h2 class="display-6 text-center mb-5" id="sectionTitle">Colección Principal</h2>
+      <h2 class="display-6 text-center mb-5">Colección Principal</h2>
       <div class="text-center mb-4">
         <button class="btn btn-warning btn-lg admin-only" data-bs-toggle="modal" data-bs-target="#addProductModal">
           + Agregar Producto
@@ -550,7 +541,6 @@
       const toggle = document.getElementById('userDropdownToggle');
       const menu = document.getElementById('userDropdownMenu');
       const nameDisplay = document.getElementById('userNameDisplay');
-      const logoutLink = document.getElementById('logoutLink');
 
       if (user) {
         const name = user.displayName || user.email.split('@')[0];
@@ -558,24 +548,23 @@
 
         toggle.classList.add('dropdown-toggle');
         toggle.setAttribute('data-bs-toggle', 'dropdown');
+        toggle.removeAttribute('data-bs-target');
 
         menu.style.display = 'block';
-        logoutLink.onclick = (e) => {
-          e.preventDefault();
-          userSignOut();
-        };
-
-        document.querySelectorAll('.admin-only').forEach(el => el.style.display = isAdmin ? 'block' : 'none');
       } else {
         nameDisplay.textContent = '';
+
         toggle.classList.remove('dropdown-toggle');
         toggle.removeAttribute('data-bs-toggle');
         toggle.setAttribute('data-bs-toggle', 'modal');
         toggle.setAttribute('data-bs-target', '#authModal');
 
         menu.style.display = 'none';
-        document.querySelectorAll('.admin-only').forEach(el => el.style.display = 'none');
       }
+
+      document.querySelectorAll('.admin-only').forEach(el => {
+        el.style.display = isAdmin ? 'block' : 'none';
+      });
 
       await loadProducts();
     });
@@ -638,7 +627,6 @@
     });
 
     window.editProduct = async (productId) => {
-      // (código completo de editProduct igual que antes)
       try {
         const docSnap = await getDoc(doc(db, "products", productId));
         if (!docSnap.exists()) {
@@ -714,7 +702,6 @@
     };
 
     window.saveProduct = async () => {
-      // (código completo de saveProduct igual que antes)
       const title = document.getElementById('prodTitle').value.trim();
       const type = document.getElementById('prodType').value.trim();
       const description = document.getElementById('prodDescription').value.trim();
