--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       .hero { height: 55vh; min-height: 420px; }
       .hero-logo { max-width: 90px; max-height: 90px; padding: 6px; }
       .navbar-brand { font-size: 1.1rem; }
-      .search-container { margin: 0.5rem 0 0 0; width: 100%; max-width: none; }
+      .search-container { margin: 0 0.5rem; max-width: none; }
       .search-input, .search-btn { height: 38px; }
       .nav-icon { font-size: 1.3rem; }
       .product-img { height: 200px; }
@@ -266,7 +266,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-    <div class="container d-flex align-items-center flex-wrap">
+    <div class="container d-flex align-items-center">
       <a class="navbar-brand me-0" href="#">narf shop.mx</a>
       <div class="search-container">
         <div class="input-group">
@@ -290,7 +290,6 @@
       </div>
     </div>
   </nav>
-
   <!-- Hero -->
   <section class="hero" id="heroSection">
     <div class="container hero-content">
@@ -300,7 +299,6 @@
       <a href="#coleccion" class="btn btn-warning btn-lg mt-4 d-block mx-auto">EXPLORAR COLECCIÓN</a>
     </div>
   </section>
-
   <!-- Colección -->
   <section id="coleccion" class="py-5">
     <div class="container">
@@ -315,7 +313,6 @@
       </div>
     </div>
   </section>
-
   <!-- Modal Autenticación -->
   <div class="modal fade auth-modal" id="authModal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
@@ -371,7 +368,6 @@
       </div>
     </div>
   </div>
-
   <!-- Modal Agregar/Editar Producto -->
   <div class="modal fade" id="addProductModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
@@ -418,14 +414,12 @@
       </div>
     </div>
   </div>
-
   <!-- Firebase + Lógica -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js";
     import { getFirestore, collection, addDoc, getDocs, doc, updateDoc, deleteDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js";
     import { getStorage, ref, uploadBytes, getDownloadURL, listAll, deleteObject } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-storage.js";
-
     const firebaseConfig = {
       apiKey: "AIzaSyAt8TuulnlY3IKPaFVctgaGNQWewfzONEI",
       authDomain: "comprobantes-363c9.firebaseapp.com",
@@ -434,17 +428,14 @@
       messagingSenderId: "390391998056",
       appId: "1:390391998056:web:23e22073d88bc247d43ddd"
     };
-
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
     const storage = getStorage(app);
     const provider = new GoogleAuthProvider();
-
     const admins = ["fernando8aparra@gmail.com", "luisatondo28@gmail.com"];
     let editMode = false;
     let currentProductId = null;
-
     async function loadLogo() {
       try {
         const logoRef = ref(storage, 'logo/narf shop logo.jpg');
@@ -455,12 +446,10 @@
         document.getElementById('heroLogo').style.display = 'none';
       }
     }
-
     // Generar tallas dinámicamente
     function populateSizes() {
       const container = document.getElementById('sizesContainer');
       if (container.children.length > 0) return;
-
       for (let s = 23; s <= 30; s++) {
         const html = `
           <div class="col-3">
@@ -478,7 +467,6 @@
           </div>`;
         container.innerHTML += html;
       }
-
       document.querySelectorAll('.size-checkbox').forEach(cb => {
         cb.addEventListener('change', function() {
           const size = this.value;
@@ -496,22 +484,18 @@
         });
       });
     }
-
     onAuthStateChanged(auth, async (user) => {
       const isAdmin = user && admins.includes(user.email);
       const toggle = document.getElementById('userDropdownToggle');
       const menu = document.getElementById('userDropdownMenu');
       const nameDisplay = document.getElementById('userNameDisplay');
       const mobileName = document.getElementById('mobileUserName');
-
       if (user) {
         let name = user.displayName || user.email.split('@')[0];
         name = name.charAt(0).toUpperCase() + name.slice(1);
         const shortName = name.length > 12 ? name.substring(0, 10) + '...' : name;
-
         nameDisplay.textContent = shortName;
         mobileName.textContent = shortName;
-
         toggle.classList.add('dropdown-toggle');
         toggle.setAttribute('data-bs-toggle', 'dropdown');
         toggle.removeAttribute('data-bs-target');
@@ -525,14 +509,11 @@
         toggle.setAttribute('data-bs-target', '#authModal');
         menu.style.display = 'none';
       }
-
       document.querySelectorAll('.admin-only').forEach(el => {
         el.style.display = isAdmin ? 'block' : 'none';
       });
-
       await loadProducts();
     });
-
     window.login = async () => {
       const email = document.getElementById('loginEmail').value.trim();
       const pass = document.getElementById('loginPassword').value;
@@ -542,14 +523,12 @@
         bootstrap.Modal.getInstance(document.getElementById('authModal')).hide();
       } catch (e) { alert("Error: " + e.message); }
     };
-
     window.googleSignIn = async () => {
       try {
         await signInWithPopup(auth, provider);
         bootstrap.Modal.getInstance(document.getElementById('authModal')).hide();
       } catch (e) { alert("Error Google: " + e.message); }
     };
-
     window.register = async () => {
       const email = document.getElementById('regEmail').value.trim();
       const pass = document.getElementById('regPassword').value;
@@ -561,7 +540,6 @@
         bootstrap.Modal.getInstance(document.getElementById('authModal')).hide();
       } catch (e) { alert("Error: " + e.message); }
     };
-
     window.confirmQuantity = (size) => {
       const input = document.getElementById('qty' + size);
       const btn = input.closest('.size-quantity-box').querySelector('.btn-listo');
@@ -574,7 +552,6 @@
       btn.classList.add('confirmed');
       btn.textContent = '¡Confirmado!';
     };
-
     document.getElementById('prodImages').addEventListener('change', (e) => {
       const preview = document.getElementById('imagePreview');
       preview.innerHTML = '';
@@ -589,18 +566,15 @@
         reader.readAsDataURL(file);
       }
     });
-
     window.editProduct = async (productId) => {
       try {
         const docSnap = await getDoc(doc(db, "products", productId));
         if (!docSnap.exists()) return alert("Producto no encontrado");
         const data = docSnap.data();
-
         document.getElementById('prodTitle').value = data.title || '';
         document.getElementById('prodType').value = data.type || '';
         document.getElementById('prodDescription').value = data.description || '';
         document.getElementById('prodPrice').value = data.price || '';
-
         document.querySelectorAll('.size-checkbox').forEach(cb => {
           const s = cb.value;
           const qtyInput = document.getElementById('qty' + s);
@@ -620,7 +594,6 @@
             btn.textContent = 'Listo';
           }
         });
-
         const preview = document.getElementById('imagePreview');
         preview.innerHTML = '';
         if (data.images && data.images.length > 0) {
@@ -631,7 +604,6 @@
             preview.appendChild(img);
           });
         }
-
         document.querySelector('#addProductModal .modal-title').textContent = 'Editar Producto';
         editMode = true;
         currentProductId = productId;
@@ -642,7 +614,6 @@
         alert("Error al cargar producto");
       }
     };
-
     window.deleteProduct = async (productId) => {
       if (!confirm("¿Eliminar este producto? No se puede deshacer.")) return;
       try {
@@ -658,18 +629,15 @@
         alert("Error al eliminar: " + err.message);
       }
     };
-
     window.saveProduct = async () => {
       const title = document.getElementById('prodTitle').value.trim();
       const type = document.getElementById('prodType').value.trim();
       const description = document.getElementById('prodDescription').value.trim();
       const price = Number(document.getElementById('prodPrice').value);
       const files = document.getElementById('prodImages').files;
-
       if (!title || !type || !description || isNaN(price) || price < 0) {
         return alert("Completa todos los campos obligatorios correctamente.");
       }
-
       const stock = {};
       let hasStock = false;
       for (let s = 23; s <= 30; s++) {
@@ -682,13 +650,10 @@
         }
       }
       if (!hasStock) return alert("Indica al menos una talla con cantidad > 0.");
-
       if (!editMode && files.length === 0) return alert("Selecciona al menos una imagen.");
-
       try {
         let productId = currentProductId;
         let existingImages = [];
-
         if (editMode) {
           const snap = await getDoc(doc(db, "products", currentProductId));
           existingImages = snap.data()?.images || [];
@@ -697,7 +662,6 @@
           const docRef = await addDoc(collection(db, "products"), { title, type, description, price, stock, images: [] });
           productId = docRef.id;
         }
-
         const newUrls = [];
         if (files.length > 0) {
           for (let file of files) {
@@ -707,10 +671,8 @@
             newUrls.push(url);
           }
         }
-
         const finalImages = editMode ? [...existingImages, ...newUrls] : newUrls;
         await updateDoc(doc(db, "products", productId), { images: finalImages });
-
         bootstrap.Modal.getInstance(document.getElementById('addProductModal')).hide();
         document.getElementById('addProductForm').reset();
         document.getElementById('imagePreview').innerHTML = '';
@@ -723,7 +685,6 @@
         document.querySelector('#addProductModal .modal-title').textContent = 'Agregar Nuevo Producto';
         editMode = false;
         currentProductId = null;
-
         await loadProducts();
         alert(editMode ? "Producto actualizado" : "Producto agregado");
       } catch (err) {
@@ -731,7 +692,6 @@
         alert("Error al guardar: " + err.message);
       }
     };
-
     async function loadProducts() {
       const container = document.getElementById('productsContainer');
       container.innerHTML = '<div class="text-center my-5"><div class="spinner-border text-warning" role="status"></div></div>';
@@ -774,13 +734,11 @@
         container.innerHTML = '<p class="text-center text-danger">Error al cargar productos.</p>';
       }
     }
-
     // Cerrar sesión
     document.getElementById('logoutLink').addEventListener('click', (e) => {
       e.preventDefault();
       signOut(auth).then(() => alert("Sesión cerrada")).catch((e) => alert("Error: " + e.message));
     });
-
     // Padding dinámico para navbar fixed
     function adjustBodyPadding() {
       const navbar = document.querySelector('.navbar-custom');
@@ -790,13 +748,11 @@
     }
     window.addEventListener('load', adjustBodyPadding);
     window.addEventListener('resize', adjustBodyPadding);
-
     // Inicialización
     populateSizes();
     loadLogo();
     loadProducts();
   </script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
