--- a/index.html
+++ b/index.html
@@ -255,13 +255,14 @@
         @media (max-width: 576px) {
             .hero { height: 55vh; min-height: 420px; }
             .hero-logo { max-width: 90px; max-height: 90px; padding: 6px; }
-            .navbar-brand { font-size: 1.1rem; }
+            .navbar-brand { font-size: 1.1rem; margin-right: 0.2rem; }
             .search-input, .search-btn { height: 38px; }
             .nav-icon { font-size: 1.3rem; }
             .product-img { height: 200px; }
-            .search-container { margin: 0 0.4rem; }
-            .navbar-brand { font-size: 1rem; }
-            .nav-icon { font-size: 1.2rem; margin-left: 0.5rem; }
+            .search-container { margin: 0 0.2rem; }
+            .d-flex.align-items-center.ms-2 { margin-left: 0 !important; }
+            .dropdown.text-center.me-3 { margin-right: 0.2rem !important; }
+            .container.d-flex { padding-left: 0.5rem; padding-right: 0.5rem; }
         }
     </style>
 </head>
