--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             backdrop-filter: blur(12px);
             border-bottom: 1px solid #222;
             padding: 0.6rem 0;
+            transition: padding-bottom 0.3s ease;
+        }
+        .navbar-custom.expanded {
+            padding-bottom: 3.5rem;
         }
         .navbar-brand {
             font-size: 1.3rem;
@@ -55,6 +59,23 @@
             max-width: 600px;
             margin: 0 0.8rem;
         }
+        .mobile-search-icon {
+            display: none;
+            color: var(--text-light);
+        }
+        .mobile-search-bar {
+            display: none;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            padding: 0.5rem 1rem;
+            background-color: rgba(13,13,13,0.95);
+            z-index: 1000;
+        }
+        .mobile-search-bar .input-group {
+            width: 100%;
+        }
         .dropdown-menu {
             background-color: #222;
             border: 1px solid #444;
@@ -82,6 +103,7 @@
             align-items: center;
             text-align: center;
             position: relative;
+            transition: margin-top 0.3s ease;
         }
         .hero-content {
             width: 100%;
@@ -210,6 +232,7 @@
             background-color: #ffffff;
             color: #000000;
             padding-bottom: 60px;
+            transition: margin-top 0.3s ease;
         }
         #coleccion h2 {
             color: #000000;
@@ -259,25 +282,39 @@
             .search-input, .search-btn { height: 38px; }
             .nav-icon { font-size: 1.3rem; }
             .product-img { height: 200px; }
-            .search-container { margin: 0 0.2rem; }
+            .search-container { display: none; }
+            .mobile-search-icon { display: block; margin-right: 1rem; }
             .d-flex.align-items-center.ms-2 { margin-left: 0 !important; }
             .dropdown.text-center.me-3 { margin-right: 0.2rem !important; }
             .container.d-flex { padding-left: 0.5rem; padding-right: 0.5rem; }
+            #productsContainer {
+                flex-direction: row;
+                overflow-x: auto;
+                overflow-y: hidden;
+                white-space: nowrap;
+            }
+            #productsContainer .col {
+                flex: 0 0 80%;
+                max-width: 80%;
+                display: inline-block;
+                white-space: normal;
+            }
         }
     </style>
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-        <div class="container d-flex align-items-center flex-nowrap">
+    <nav class="navbar navbar-custom fixed-top">
+        <div class="container d-flex align-items-center flex-nowrap position-relative">
             <a class="navbar-brand me-2" href="#">narf shop.mx</a>
             <div class="search-container">
                 <div class="input-group">
-                    <input type="text" class="form-control search-input" placeholder="Buscar sneakers premium...">
-                    <button class="btn search-btn"><i class="bi bi-search"></i></button>
+                    <input type="text" id="searchInput" class="form-control search-input" placeholder="Buscar sneakers premium...">
+                    <button class="btn search-btn" id="searchButton"><i class="bi bi-search"></i></button>
                 </div>
             </div>
             <div class="d-flex align-items-center ms-2">
+                <a href="#" class="nav-icon mobile-search-icon" id="mobileSearchToggle"><i class="bi bi-search"></i></a>
                 <div class="dropdown text-center me-3">
                     <a class="nav-icon" id="userDropdownToggle" href="#" role="button">
                         <i class="bi bi-person"></i>
@@ -290,6 +327,12 @@
                     </ul>
                 </div>
                 <a href="#" class="nav-icon"><i class="bi bi-cart3"></i></a>
+            </div>
+            <div class="mobile-search-bar" id="mobileSearchBar">
+                <div class="input-group">
+                    <input type="text" id="mobileSearchInput" class="form-control search-input" placeholder="Buscar sneakers premium...">
+                    <button class="btn search-btn" id="mobileSearchButton"><i class="bi bi-search"></i></button>
+                </div>
             </div>
         </div>
     </nav>
@@ -421,7 +464,7 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
         import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js";
-        import { getFirestore, collection, addDoc, getDocs, doc, updateDoc, deleteDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js";
+        import { getFirestore, collection, addDoc, getDocs, doc, updateDoc, deleteDoc, getDoc, query, where } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore.js";
         import { getStorage, ref, uploadBytes, getDownloadURL, listAll, deleteObject } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-storage.js";
         const firebaseConfig = {
             apiKey: "AIzaSyAt8TuulnlY3IKPaFVctgaGNQWewfzONEI",
@@ -439,6 +482,7 @@
         const admins = ["fernando8aparra@gmail.com", "luisatondo28@gmail.com"];
         let editMode = false;
         let currentProductId = null;
+        let allProducts = [];
         async function loadLogo() {
             try {
                 const logoRef = ref(storage, 'logo/narf shop logo.jpg');
@@ -515,7 +559,7 @@
             document.querySelectorAll('.admin-only').forEach(el => {
                 el.style.display = isAdmin ? 'block' : 'none';
             });
-            await loadProducts();
+            await loadProducts(true);
         });
         window.login = async () => {
             const email = document.getElementById('loginEmail').value.trim();
@@ -626,7 +670,7 @@
                 for (const itemRef of listResult.items) {
                     await deleteObject(itemRef);
                 }
-                await loadProducts();
+                await loadProducts(true);
                 alert("Producto eliminado");
             } catch (err) {
                 alert("Error al eliminar: " + err.message);
@@ -688,54 +732,76 @@
                 document.querySelector('#addProductModal .modal-title').textContent = 'Agregar Nuevo Producto';
                 editMode = false;
                 currentProductId = null;
-                await loadProducts();
+                await loadProducts(true);
                 alert(editMode ? "Producto actualizado" : "Producto agregado");
             } catch (err) {
                 console.error(err);
                 alert("Error al guardar: " + err.message);
             }
         };
-        async function loadProducts() {
+        async function loadProducts(loadAll = false) {
             const container = document.getElementById('productsContainer');
             container.innerHTML = '<div class="text-center my-5"><div class="spinner-border text-warning" role="status"></div></div>';
             try {
                 const snapshot = await getDocs(collection(db, "products"));
-                container.innerHTML = '';
-                if (snapshot.empty) {
-                    container.innerHTML = '<p class="text-center text-muted col-12">No hay productos aún.</p>';
-                    return;
-                }
+                allProducts = [];
                 snapshot.forEach(doc => {
                     const d = doc.data();
-                    const img = d.images && d.images.length > 0 ? d.images[0] : 'https://via.placeholder.com/300x270?text=Sin+Imagen';
-                    const descBreve = d.description ? d.description.substring(0, 120) + (d.description.length > 120 ? '...' : '') : 'Sin descripción';
-                    container.innerHTML += `
-                        <div class="col">
-                            <div class="product-card">
-                                <div class="position-absolute top-0 end-0 p-2 admin-only admin-pencil">
-                                    <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown">
-                                        <i class="bi bi-pencil"></i>
-                                    </button>
-                                    <ul class="dropdown-menu dropdown-menu-end">
-                                        <li><a class="dropdown-item" href="#" onclick="event.preventDefault(); editProduct('${doc.id}')">Editar</a></li>
-                                        <li><a class="dropdown-item text-danger" href="#" onclick="event.preventDefault(); deleteProduct('${doc.id}')">Eliminar</a></li>
-                                    </ul>
-                                </div>
-                                <img src="${img}" class="product-img" alt="${d.title}">
-                                <div class="product-info">
-                                    <h6 class="product-title">${d.title}</h6>
-                                    <p class="product-desc">${descBreve}</p>
-                                    <div class="d-flex justify-content-between align-items-center mt-auto">
-                                        <span class="product-price">$${d.price?.toLocaleString() || '0'} MXN</span>
-                                        <a href="product.html?id=${doc.id}" class="btn btn-warning btn-sm">Ver más</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>`;
+                    d.id = doc.id;
+                    allProducts.push(d);
                 });
+                renderProducts(allProducts);
             } catch (err) {
                 container.innerHTML = '<p class="text-center text-danger">Error al cargar productos.</p>';
             }
+        }
+        function renderProducts(products) {
+            const container = document.getElementById('productsContainer');
+            container.innerHTML = '';
+            if (products.length === 0) {
+                container.innerHTML = '<p class="text-center text-muted col-12">No hay productos que coincidan con la búsqueda.</p>';
+                return;
+            }
+            products.forEach(d => {
+                const img = d.images && d.images.length > 0 ? d.images[0] : 'https://via.placeholder.com/300x270?text=Sin+Imagen';
+                const descBreve = d.description ? d.description.substring(0, 120) + (d.description.length > 120 ? '...' : '') : 'Sin descripción';
+                container.innerHTML += `
+                    <div class="col">
+                        <div class="product-card">
+                            <div class="position-absolute top-0 end-0 p-2 admin-only admin-pencil">
+                                <button class="dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                                    <i class="bi bi-pencil"></i>
+                                </button>
+                                <ul class="dropdown-menu dropdown-menu-end">
+                                    <li><a class="dropdown-item" href="#" onclick="event.preventDefault(); editProduct('${d.id}')">Editar</a></li>
+                                    <li><a class="dropdown-item text-danger" href="#" onclick="event.preventDefault(); deleteProduct('${d.id}')">Eliminar</a></li>
+                                </ul>
+                            </div>
+                            <img src="${img}" class="product-img" alt="${d.title}">
+                            <div class="product-info">
+                                <h6 class="product-title">${d.title}</h6>
+                                <p class="product-desc">${descBreve}</p>
+                                <div class="d-flex justify-content-between align-items-center mt-auto">
+                                    <span class="product-price">$${d.price?.toLocaleString() || '0'} MXN</span>
+                                    <a href="product.html?id=${d.id}" class="btn btn-warning btn-sm">Ver más</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>`;
+            });
+        }
+        function performSearch(queryStr) {
+            if (!queryStr) {
+                renderProducts(allProducts);
+                return;
+            }
+            const lowerQuery = queryStr.toLowerCase();
+            const filtered = allProducts.filter(p => 
+                p.title.toLowerCase().includes(lowerQuery) ||
+                p.type.toLowerCase().includes(lowerQuery) ||
+                p.description.toLowerCase().includes(lowerQuery)
+            );
+            renderProducts(filtered);
         }
         // Cerrar sesión
         document.getElementById('logoutLink').addEventListener('click', (e) => {
@@ -751,10 +817,47 @@
         }
         window.addEventListener('load', adjustBodyPadding);
         window.addEventListener('resize', adjustBodyPadding);
+        // Mobile search toggle
+        const mobileSearchToggle = document.getElementById('mobileSearchToggle');
+        const mobileSearchBar = document.getElementById('mobileSearchBar');
+        const navbar = document.querySelector('.navbar-custom');
+        const hero = document.getElementById('heroSection');
+        const coleccion = document.getElementById('coleccion');
+        const mobileSearchInput = document.getElementById('mobileSearchInput');
+        if (mobileSearchToggle) {
+            mobileSearchToggle.addEventListener('click', () => {
+                if (mobileSearchBar.style.display === 'block') {
+                    mobileSearchBar.style.display = 'none';
+                    navbar.classList.remove('expanded');
+                    hero.style.marginTop = '0';
+                    coleccion.style.marginTop = '0';
+                } else {
+                    mobileSearchBar.style.display = 'block';
+                    navbar.classList.add('expanded');
+                    hero.style.marginTop = '3rem';
+                    coleccion.style.marginTop = '3rem';
+                    mobileSearchInput.focus();
+                }
+                adjustBodyPadding();
+            });
+        }
+        // Search functionality
+        const searchButton = document.getElementById('searchButton');
+        const searchInput = document.getElementById('searchInput');
+        if (searchButton) {
+            searchButton.addEventListener('click', () => {
+                performSearch(searchInput.value.trim());
+            });
+        }
+        const mobileSearchButton = document.getElementById('mobileSearchButton');
+        if (mobileSearchButton) {
+            mobileSearchButton.addEventListener('click', () => {
+                performSearch(mobileSearchInput.value.trim());
+            });
+        }
         // Inicialización
         populateSizes();
         loadLogo();
-        loadProducts();
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
